test/tests/operators/to_file/validation/error_write_permission_denied.txt
error: failed to canonicalize path: filesystem error: status: Permission denied [/root/forbidden.json]
 --> tests/operators/to_file/validation/error_write_permission_denied.tql:6:9
  |
6 | to_file "/root/forbidden.json" {
  |         ^^^^^^^^^^^^^^^^^^^^^^ 
  |
